clusters/home/apps/cloud/hermes/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hermes
  labels:
    goldilocks.fairwinds.com/enabled: "true"
